Fix layout issue when window is too narrow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.site-layout {
+    min-width: max-content;
+}
+
 .content-layout {
     padding: 0 50px;
 }
